UI fixes (#667)
* adhoc UI fixes(refer commit description for list of changes)

-> added mandatory(*) to overhead and nonsor
-> removed hover effect on tables(grey background)
-> changed gst to 18% and deactivated REW in overheads
->Star mark in NONSOR and OVERHEADS lables *
-> workflow comments not wrapped
-> allowed comment length keep at 512 in UI
-> remove grey hover from tables in create estimate
-> Amout details are not in right align in view estimate
->limit to 2 decimals in rate and quantity (quantity is integer)
->labour and material not aligned
->check if isActive check is there in overheads
->remove REW,gst set to 18%
->in view estimate amount right align
->Estimate regex update

* ui fixes

* [Demo Changes] | [Prachi] | Update breadcrumbs from Works to Mukta

* Update FormComposer.js

* Update table.scss

* Update package.json

---------

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/table.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/table.scss
@@ -176,6 +176,7 @@
                 margin-left: -60px;
                 opacity: 0;
                 transition: opacity 0.3s;
+                width: 30rem;
               }
           }
     
@@ -207,9 +208,7 @@
     border: 1px solid #ddd;
     padding: 12px;
   }
-  tr:hover {
-    background-color: #efefef;
-  }
+  
   th {
     padding: 10px;
     text-align: center;
@@ -311,9 +310,6 @@
       padding: 12px;
     }
   
-    tr:hover {
-      background-color: #efefef;
-    }
   
     th {
       padding: 10px;
