--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
@@ -965,3 +965,8 @@ input[type="number"] {
   }
 }
 }
+
+.text-wrap-overflow {
+  word-wrap: break-word;
+  word-break: break-all;
+}
